--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "start": "webpack-dev-server --open",
-    "build": "webpack"
+    "build": "webpack",
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,10 @@
   "homepage": "https://github.com/amluck/aLittleBiteofWebpack#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.16",
+    "express": "^4.16.2",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.5.5",
+    "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.7.1"
   }
 }
