--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"webpack"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/amluck/aLittleBiteofWebpack#readme",
   "devDependencies": {
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
     "webpack": "^3.5.5"
   }
 }
